# sphinx_evas_theme

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  OFL-License.txt  README.md  README.rst  docker-compose.yaml  docker-entrypoint.sh  package-lock.json  package.json  setup.cfg  setup.py  webpack.common.js
.circleci/: config.yml
.tx/: config
docs/: changelog.rst  conf.py  configuring.rst  contributing.rst  development.rst  index.rst  installing.rst  requirements.txt
docs/_templates/: layout.html
docs/demo/: demo.rst  lists_tables.rst
docs/demo/test_py_module/: test.py
sphinx_evas_theme/: __init__.py  builder.py  events.py  footer.html  layout.html  quickstart.py  searchbox.html  theme.conf  versions.html  writer.py
sphinx_evas_theme/docx/: __init__.py  style.docx
sphinx_evas_theme/docx_templates/: style.docx
sphinx_evas_theme/latex_templates/: docinfo.sty  preamble.tex  titlepage.tex
sphinx_evas_theme/locale/: sphinx.pot
sphinx_evas_theme/locale/en/LC_MESSAGES/: sphinx.mo  sphinx.po
sphinx_evas_theme/locale/zh_CN/LC_MESSAGES/: sphinx.mo  sphinx.po
sphinx_evas_theme/static/css/: badge_only.css  theme.css
sphinx_evas_theme/templates/: Makefile  make.bat  requirements.txt
sphinx_evas_theme/templates/source/: README.md  conf.py  index.rst  myst_markdown.md  quickstart.py
src/sass/: _theme_rst.sass  _theme_variables.sass
tests/: util.py
