[bumpversion]
current_version = 0.2.0
commit = false
tag = false
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{dev}
	{major}.{minor}.{patch}

[metadata]
name = sphinx_evas_theme
url = https://github.com/ikiwihome/sphinx_evas_theme
license = MIT
author = EVAS Intelligence Co., Ltd
author_email = business@evas.ai
description = EVAS Docs theme for Sphinx
long_description = file: README.rst
project_urls = 
	Homepage = https://sphinx-evas-theme.readthedocs.io/
	Source Code = https://github.com/ikiwihome/sphinx_evas_theme
	Issue Tracker = https://github.com/ikiwihome/sphinx_evas_theme/issues
classifiers = 
	Framework :: Sphinx
	Framework :: Sphinx :: Theme
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	Topic :: Documentation
	Topic :: Software Development :: Documentation

[options]
include_package_data = True
zip_safe = False
packages = sphinx_evas_theme
python_requires = >=3.6
install_requires = 
	sphinx >=5,<8
	docutils >=0.20
	sphinxcontrib-jquery >=4,<5
	sphinx_markdown_tables >=0.0.17
	sphinx_copybutton >=0.5
	recommonmark >=0.7
tests_require = 
	pytest

[options.extras_require]
dev = 
	transifex-client
	sphinxcontrib-httpdomain
	bump2version
	wheel

[options.entry_points]
sphinx.html_themes = 
	sphinx_evas_theme = sphinx_evas_theme
console_scripts =
    evas = sphinx_evas_theme.quickstart:main

[options.package_data]
sphinx_evas_theme = 
	theme.conf
	*.html
	static/css/*.css
	static/css/fonts/*.*
	static/js/*.js

[bdist_wheel]
universal = 1

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx_evas_theme/locale/sphinx.pot
keywords = _ l_ lazy_gettext
add_comments = Translators:

[init_catalog]
domain = sphinx
input_file = sphinx_evas_theme/locale/sphinx.pot
output_dir = sphinx_evas_theme/locale/

[update_catalog]
domain = sphinx
input_file = sphinx_evas_theme/locale/sphinx.pot
output_dir = sphinx_evas_theme/locale/

[compile_catalog]
domain = sphinx
directory = sphinx_evas_theme/locale/

[bumpversion:part:release]
optional_value = release
first_value = alpha
values = 
	alpha
	rc
	release

[bumpversion:part:dev]
first_value = 1

[bumpversion:file:setup.py]

[bumpversion:file:sphinx_evas_theme/__init__.py]

[bumpversion:file:package.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[bumpversion:file:docs/changelog.rst]
search = .. |theme_version| replace:: {current_version}
replace = .. |theme_version| replace:: {new_version}
