[bumpversion]
current_version = 1.0.1
commit = false
tag = false
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{dev}
	{major}.{minor}.{patch}

[metadata]
name = sphinx_evas_theme
url = https://github.com/ikiwihome/sphinx_evas_theme
license = MIT
author = EVAS Intelligence Co., Ltd
author_email = business@evas.ai
description = The perfect html and pdf style by using Sphinx and latex
long_description_content_type = text/markdown
long_description = file: README.md
project_urls = 
	Homepage = https://sphinx-evas-theme.readthedocs.io/
	Source Code = https://github.com/ikiwihome/sphinx_evas_theme
	Issue Tracker = https://github.com/ikiwihome/sphinx_evas_theme/issues
classifiers = 
	Framework :: Sphinx
	Framework :: Sphinx :: Theme
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	Topic :: Documentation
	Topic :: Software Development :: Documentation

[options]
include_package_data = True
zip_safe = False
packages = sphinx_evas_theme
python_requires = >=3.6
install_requires = 
	sphinx >=5,<8
	docutils >=0.20
	sphinxcontrib-jquery >=4,<5
	sphinx_markdown_tables >=0.0.17
	sphinx_copybutton >=0.5
	myst_parser >=2.0.0
	sphinx_design >=0.5.0
	sphinx-togglebutton >=0.3.2
	sphinx-markdown-checkbox >=0.1.0
	sphinxcontrib-mermaid >=0.9.2
	sphinxcontrib-getthecode >=1.2.1
tests_require = 
	pytest

[options.extras_require]
dev = 
	transifex-client
	sphinxcontrib-httpdomain
	bump2version
	wheel

[options.entry_points]
sphinx.html_themes = 
	sphinx_evas_theme = sphinx_evas_theme
console_scripts =
    evas = sphinx_evas_theme.quickstart:main

[options.package_data]
sphinx_evas_theme = 
	theme.conf
	*.html
	static/*.*
	static/css/*.css
	static/css/fonts/*.*
	static/js/*.js
	templates/*
	templates/source/*.*
	templates/source/_static/*.*
	latex_templates/*.*
	latex_templates/fonts/*.*

[bdist_wheel]
universal = 1

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx_evas_theme/locale/sphinx.pot
keywords = _ l_ lazy_gettext
add_comments = Translators:

[init_catalog]
domain = sphinx
input_file = sphinx_evas_theme/locale/sphinx.pot
output_dir = sphinx_evas_theme/locale/

[update_catalog]
domain = sphinx
input_file = sphinx_evas_theme/locale/sphinx.pot
output_dir = sphinx_evas_theme/locale/

[compile_catalog]
domain = sphinx
directory = sphinx_evas_theme/locale/

[bumpversion:part:release]
optional_value = release
first_value = alpha
values = 
	alpha
	rc
	release

[bumpversion:part:dev]
first_value = 1

[bumpversion:file:setup.py]

[bumpversion:file:sphinx_evas_theme/__init__.py]

[bumpversion:file:package.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",
